--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
     <div class="name-container">
       <h1 class="name">Benjamin Breckenridge Ugaz</h1>
     </div>
-    <div class="contact-info">
-      <p class="info"><strong>Phone:</strong> (410) 572-7093</p>
-      <p class="info"><strong>Email:</strong> Bugaz@Benjaminbugaz.com</p>
-      <p class="info"><strong>Location:</strong> Martinsburg, WV</p>
-    </div>
-    <div class="objective">
-      <h2>Objective</h2>
-      <p>To obtain a challenging position in the field of Information Technology or Cybersecurity.</p>
-    </div>
     <div class="resume">
+      <div class="contact-info">
+      <p class="info"><strong>Phone:</strong> (410) 572-7093 <strong>| Email:</strong> Bugaz@Benjaminbugaz.com <strong>| Location:</strong> Martinsburg, WV</p>
+      <div class="objective">
+        <h2>Objective</h2>
+        <p>To obtain a challenging position in the field of Information Technology or Cybersecurity.</p>
+      </div>
       <h2>Education</h2>
       <ul>
         <li>
