--- a/index.html
+++ b/index.html
@@ -11,80 +11,80 @@
     </div>
     <div class="resume">
       <div class="contact-info">
-      <p class="info"><strong>Phone:</strong> (410) 572-7093 <strong>| Email:</strong> Bugaz@Benjaminbugaz.com <strong>| Location:</strong> Martinsburg, WV</p>
-      <div class="objective">
-        <h2>Objective</h2>
-        <p>To obtain a challenging position in the field of Information Technology or Cybersecurity.</p>
+        <p class="info"><strong>Phone:</strong> (410) 572-7093 <strong>| Email:</strong> Bugaz@Benjaminbugaz.com <strong>| Location:</strong> Martinsburg, WV</p>
+        <div class="objective">
+          <h2>Objective</h2>
+          <p>To obtain a challenging position in the field of Information Technology or Cybersecurity.</p>
+        </div>
+        <h2>Education</h2>
+        <ul>
+          <li>
+            <strong>Associate of Applied Science, Information Technology (Anticipated May 2024)</strong><br>
+            <strong>Associate of Applied Science, Cybersecurity (Anticipated May 2024)</strong><br>
+            Blue Ridge Community & Technical College, Martinsburg, WV<br>
+            GPA 3.6/4
+          </li>
+        </ul>
+        <h2>Certificate</h2>
+        <ul>
+          <li>
+            <strong>Coding App and Game Design</strong><br>
+            James Rumsey Technical Institute, Martinsburg, WV
+          </li>
+        </ul>
+        <h2>Relevant Coursework</h2>
+        <div class="two-columns">
+          <ul>
+            <li>Information Literacy</li>
+            <li>Networking Fundamentals</li>
+            <li>Fundamentals of Speech</li>
+            <li>Intro to Cybersecurity</li>
+            <li>Technical Writing & Communication</li>
+          </ul>
+          <ul>
+            <li>Information Security Fundamentals</li>
+            <li>Computer Ethics</li>
+            <li>Introduction to Linux</li>
+          </ul>
+        </div>
+        <h2>Skills and Abilities</h2>
+        <div class="two-columns">
+          <ul>
+            <li>Microsoft Office</li>
+            <li>Cisco Packet Tracer</li>
+            <li>Windows OS</li>
+            <li>Wireshark (network protocol analyzer)</li>
+            <li>Nmap (network mapping and port scanning tool)</li>
+          </ul>
+          <ul>
+            <li>Python programming</li>
+            <li>Java programming</li>
+            <li>HTML/CSS web development</li>
+            <li>Linux Ubuntu</li>
+          </ul>
+        </div>
+        <h2>Experience</h2>
+        <ul>
+          <li>
+            <strong>Computer Installer</strong><br>
+            Dally Computers, Laurel, MD<br>
+            June 2022 - Present<br>
+            - Installed and configured hardware and software for clients' computer systems.<br>
+            - Provided technical assistance and troubleshooting for computer-related issues.<br>
+            - Collaborated with clients to ensure their computer systems met their needs.<br>
+            - Maintained accurate records of installations and repairs.
+          </li>
+          <li>
+            <strong>Help Desk</strong><br>
+            Delaware North, Yellowstone, Montana<br>
+            August 2021 - May 2022<br>
+            - Assisted visitors and staff with technical issues and inquiries at the help desk.<br>
+            - Resolved software and hardware problems, escalating complex issues as needed.<br>
+            - Provided friendly and efficient customer service to ensure a positive experience.<br>
+            - Documented and tracked support requests to maintain accurate records.
+          </li>
+        </ul>
       </div>
-      <h2>Education</h2>
-      <ul>
-        <li>
-          <strong>Associate of Applied Science, Information Technology (Anticipated May 2024)</strong><br>
-          <strong>Associate of Applied Science, Cybersecurity (Anticipated May 2024)</strong><br>
-          Blue Ridge Community & Technical College, Martinsburg, WV<br>
-          GPA 3.6/4
-        </li>
-      </ul>
-      <h2>Certificate</h2>
-      <ul>
-        <li>
-          <strong>Coding App and Game Design</strong><br>
-          James Rumsey Technical Institute, Martinsburg, WV
-        </li>
-      </ul>
-      <h2>Relevant Coursework</h2>
-      <div class="two-columns">
-        <ul>
-          <li>Information Literacy</li>
-          <li>Networking Fundamentals</li>
-          <li>Fundamentals of Speech</li>
-          <li>Intro to Cybersecurity</li>
-          <li>Technical Writing & Communication</li>
-        </ul>
-        <ul>
-          <li>Information Security Fundamentals</li>
-          <li>Computer Ethics</li>
-          <li>Introduction to Linux</li>
-        </ul>
-      </div>
-      <h2>Skills and Abilities</h2>
-      <div class="two-columns">
-        <ul>
-          <li>Microsoft Office</li>
-          <li>Cisco Packet Tracer</li>
-          <li>Windows OS</li>
-          <li>Wireshark (network protocol analyzer)</li>
-          <li>Nmap (network mapping and port scanning tool)</li>
-        </ul>
-        <ul>
-          <li>Python programming</li>
-          <li>Java programming</li>
-          <li>HTML/CSS web development</li>
-          <li>Linux Ubuntu</li>
-        </ul>
-      </div>
-      <h2>Experience</h2>
-      <ul>
-        <li>
-          <strong>Grill Cook</strong><br>
-          Cracker Barrel, Martinsburg, WV<br>
-          June 2023 - Present<br>
-          - Prepare and cook food items according to Cracker Barrel's recipes and guidelines.<br>
-          - Maintain cleanliness and organization of the grill station and kitchen area.<br>
-          - Adhere to food safety and sanitation standards to ensure high-quality food preparation.<br>
-          - Collaborate with team members to ensure timely and efficient service.<br>
-          - Demonstrate strong multitasking skills and the ability to work in a fast-paced environment.
-        </li>
-        <li>
-          <strong>Barista</strong><br>
-          Martins, Martinsburg, WV<br>
-          August 2021 - May 2022<br>
-          - Demonstrated self-motivation and a strong commitment to customer satisfaction.<br>
-          - Maintained a calm, flexible, and adaptable demeanor, leading to optimal productivity.<br>
-          - Ensured awareness of allergens and adhered to safe-working habits.<br>
-          - Followed directions accurately and took initiative when appropriate.
-        </li>
-      </ul>
     </div>
   </div>
 </body>
